WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204068
REGRESSION(
r250707
): [GTK] UIClient::setWindowFrame only works the first time
https://bugs.webkit.org/show_bug.cgi?id=204068
Summary
REGRESSION(r250707): [GTK] UIClient::setWindowFrame only works the first time
Carlos Garcia Campos
Reported
2019-11-11 07:10:22 PST
This is because we are connecting to configure-event of parent window, but not returning FALSE from the callback to propagate the event.
Attachments
Patch
(1.83 KB, patch)
2019-11-11 07:11 PST
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-11-11 07:11:26 PST
Created
attachment 383267
[details]
Patch
EWS Watchlist
Comment 2
2019-11-11 07:12:22 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2019-11-12 00:08:01 PST
Committed
r252355
: <
https://trac.webkit.org/changeset/252355
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug