REGRESSION(r250707): [GTK] UIClient::setWindowFrame only works the first time https://bugs.webkit.org/show_bug.cgi?id=204068

Reviewed by Adrian Perez de Castro.

This is because we are connecting to configure-event of parent window, but not returning FALSE from the callback
to propagate the event.

* UIProcess/API/glib/WebKitUIClient.cpp:
(UIClient::windowConfigureEventCallback): Make it boolean and return FALSE.

Canonical link: https://commits.webkit.org/217410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252355 268f45cc-cd09-0410-ab3c-d52691b4dbfc